# perf-event-open

./: Cargo.toml  LICENSE  README.md  check.sh  flake.nix
src/: lib.rs
src/config/: attr.rs  mod.rs  target.rs
src/config/sibling/: attr.rs  mod.rs
src/count/: group.rs  mod.rs  stat.rs
src/event/: bp.rs  hw.rs  mod.rs  raw.rs  sw.rs  tp.rs
src/event/dp/: mod.rs
src/event/dp/kp/: mod.rs  test.rs
src/event/dp/up/: mod.rs  test.rs
src/ffi/: bindings.rs  linux_syscall.rs  mod.rs  syscall.rs
src/ffi/bindings/: .linux-4.0.rs  .linux-4.1.rs  .linux-4.11.rs  .linux-4.13.rs  .linux-4.14.rs  .linux-4.15.rs  .linux-4.16.rs  .linux-4.17.rs  .linux-4.18.rs  .linux-4.2.rs  .linux-4.20.rs  .linux-4.3.rs  .linux-4.4.rs  .linux-4.5.rs  .linux-4.6.rs  .linux-4.7.rs  .linux-4.9.rs  .linux-5.0.rs  .linux-5.1.rs  .linux-5.10.rs  .linux-5.11.rs  .linux-5.12.rs  .linux-5.13.rs  .linux-5.14.rs  .linux-5.16.rs  .linux-5.17.rs  .linux-5.19.rs  .linux-5.2.rs  .linux-5.4.rs  .linux-5.5.rs  .linux-5.7.rs  .linux-5.8.rs  .linux-5.9.rs  .linux-6.0.rs  .linux-6.1.rs  .linux-6.11.rs  .linux-6.12.rs  .linux-6.13.rs  .linux-6.14.rs  .linux-6.15.rs  (+8 more)
src/sample/: arena.rs  mod.rs
src/sample/auxiliary/: mod.rs  rb.rs
src/sample/auxiliary/iter/: cow.rs  mod.rs
src/sample/iter/: cow.rs  mod.rs
src/sample/rb/: cow.rs  mod.rs
src/sample/record/: auxiliary.rs  bpf.rs  call_chain.rs  cgroup.rs  comm.rs  ctx.rs  itrace.rs  ksymbol.rs  lost.rs  mmap.rs  mod.rs  ns.rs  read.rs  sample.rs  task.rs  text_poke.rs  throttle.rs
