[package]
name = "perf-event-open"
version = "0.3.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Thaumy/perf-event-open"
keywords = ["perf_event_open", "performance", "linux", "perf"]
repository = "https://github.com/Thaumy/perf-event-open"
description = "Full-featured high-level wrapper for the perf_event_open system call."
rust-version = "1.80.0"

build = "build/main.rs"

[features]
"serde" = []
"latest" = ["linux-6.13"]
"legacy" = ["linux-5.4"]
"linux-6.13" = ["linux-6.11"]
"linux-6.11" = ["linux-6.8"]
"linux-6.8" = ["linux-6.6"]
"linux-6.6" = ["linux-6.3"]
"linux-6.3" = ["linux-6.1"]
"linux-6.1" = ["linux-6.0"]
"linux-6.0" = ["linux-5.18"]
"linux-5.18" = ["linux-5.17"]
"linux-5.17" = ["linux-5.16"]
"linux-5.16" = ["linux-5.13"]
"linux-5.13" = ["linux-5.12"]
"linux-5.12" = ["linux-5.11"]
"linux-5.11" = ["linux-5.9"]
"linux-5.9" = ["linux-5.7"]
"linux-5.7" = ["linux-5.5"]
"linux-5.5" = ["linux-5.4"]
"linux-5.4" = ["linux-5.1"]
"linux-5.1" = ["linux-4.17"]
"linux-4.17" = ["linux-4.16"]
"linux-4.16" = ["linux-4.15"]
"linux-4.15" = ["linux-4.14"]
"linux-4.14" = ["linux-4.12"]
"linux-4.12" = ["linux-4.10"]
"linux-4.10" = ["linux-4.8"]
"linux-4.8" = ["linux-4.7"]
"linux-4.7" = ["linux-4.5"]
"linux-4.5" = ["linux-4.4"]
"linux-4.4" = ["linux-4.3"]
"linux-4.3" = ["linux-4.2"]
"linux-4.2" = ["linux-4.1"]
"linux-4.1" = ["linux-4.0"]
"linux-4.0" = []

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
arrayvec = { version = "0.7", features = ["serde"] }
thiserror = "2.0"

[dev-dependencies]
aya = "0.13"
uuid = { version = "1.17", features = ["v4"] }
tokio-test = "0.4"

[build-dependencies]
anyhow = "1.0"
bindgen = "0.72"
itertools = "0.14"
